--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,24 +9,41 @@
 
 <div id="ui" class="row" ng-controller="UICtrl">
   <div class="col-md-3 pull-left">
-
     <h4>Ligand - Receptor Pairs</h4>
     <div class="pull-right">{{selected.pairs.length}} / <a href ng-click="selected.pairs = data.pairs">{{data.pairs.length}}</a></div>
-    <select id="pairs" class="col-md-12" size="30" multiple ng-model="selected.pairs" ng-options="p.Ligand + '-' + p.Receptor for p in data.pairs">
+    <select id="pairs" class="col-md-12" size="30" multiple ng-model="selected.pairs" ng-options="p.Ligand + '-' + p.Receptor for p in data.pairs track by p.id">
     </select>
   </div>
-  <div id="vis" class="col-md-6 pull-left">
+  <div id="" class="col-md-6 pull-left">
     <h4>Ligand - Receptor network</h4>
-    <br />Nodes: {{graph.nodes.length}}
-    <br />Edges: <span ng-class="{'text-danger': graph.edges.length >= 100}">{{graph.edges.length}}</span>
-    <noscript>Missing javascript</noscript>
-    <svg></svg>
-    
+    <div class="col-md-6">
+      <div class="col-md-3">{{ligandRange.min | number:2}}</div>
+      <div class="col-md-6 text-center">Ligand min TPM</div>
+      <div class="col-md-3 text-right">{{ligandRange.max | number:2}}</div>
+      <input type="range" name="points" min="0" max="{{ligandRange.max}}" step="1" ng-model="ligandRange.val">
+      {{ligandRange.val | number:2}}
+    </div>
+    <div class="col-md-6">
+      <div class="col-md-3">{{receptorRange.min | number:2}}</div>
+      <div class="col-md-6 text-center">Receptor min TPM</div>
+      <div class="col-md-3 text-right">{{receptorRange.max | number:2}}</div>
+      <input type="range" name="points" min="0" max="{{receptorRange.max}}" step="1" ng-model="receptorRange.val">
+      {{receptorRange.val | number:2}}
+    </div>
+    <div id="vis" class="row col-md-12">
+      <div class="hud pull-left">
+        Nodes: {{graph.nodes.length}}
+        <br /><span ng-class="{'bg-danger': graph.edges.length >= 100}">Edges: {{graph.edges.length}} <span ng-show="graph.edges.length >= 100">Maximum of 100 edges shown</span></span>    
+      </div>
+
+      <noscript>Missing javascript</noscript>
+      <svg></svg>
+    </div>
   </div>
   <div class="col-md-3 pull-right">
     <h4>Cells</h4>
     <div class="pull-right">{{selected.cells.length}} / <a href ng-click="selected.cells = data.cells">{{data.cells.length}}</a></div>
-    <select id="cells" class="col-md-12" size="30" multiple ng-model="selected.cells" ng-options="p.name for p in data.cells"></select>
+    <select id="cells" class="col-md-12" size="30" multiple ng-model="selected.cells" ng-options="c.name for c in data.cells track by c.id"></select>
   </div>
 </div>
 
