--- a/app/styles/jordan_network.css
+++ b/app/styles/jordan_network.css
@@ -1,76 +1,93 @@
-	/* #vis { text-align: center; width: 700px;}
-	#vis svg { width: 100%; height: 500px; } */
+  /* #vis { text-align: center; width: 700px;}
+  #vis svg { width: 100%; height: 500px; } */
 
-	.node {
-	  fill: #ccc;
-	  fill-opacity: 1;
-	  stroke: #333;
-	  stroke-width: 1.5px;
-	  cursor: pointer;
-	}
+#vis svg { 
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 2%;
+  right: 2%;
+  width: 96%;
+  height: 100%;
+}
 
-	.node text {
-		stroke: #333;
-		stroke-width: 1px;
-		cursor: pointer;
-	}
+.node {
+  fill: #ccc;
+  fill-opacity: 1;
+  stroke: #333;
+  stroke-width: 1.5px;
+  cursor: pointer;
+}
 
-	.node:hover, .node.hover {
-		stroke: #333;
-		fill: blue;
-		stroke-width: 2px;
-	}
+.node text {
+  stroke: #333;
+  stroke-width: 1px;
+  cursor: pointer;
+}
 
-	.node.fixed circle {
-	  stroke: red !important;
-	  stroke-width: 3px !important;
-	}
+.node:hover, .node.hover {
+  stroke: #333;
+  fill: blue;
+  stroke-width: 2px;
+}
 
-	.link {
-	  fill: none;
-	  stroke: #666;
-	  stroke-width: 1.5px;
-	  opacity: 0.6;
-	}
+.node.fixed circle {
+  stroke: red !important;
+  stroke-width: 3px !important;
+}
 
-	svg.fixed .link {
-		stroke: #666;
-		opacity: 0.3;
-	}
+.link {
+  fill: none;
+  stroke: #666;
+  stroke-width: 1.5px;
+  opacity: 0.6;
+}
 
-	svg.hover .link {
-		stroke: #666 !important;
-		opacity: 0.1 !important;
-	}
+svg.fixed .link {
+  stroke: #666;
+  opacity: 0.3;
+}
 
-	svg.hover .link.hover, .link:hover {
-		stroke: blue !important;
-		opacity: 1 !important;
-	}
+svg.hover .link {
+  stroke: #666 !important;
+  opacity: 0.1 !important;
+}
 
-	svg.fixed .link.fixed {
-		stroke: red;
-		opacity: 1;
-	}
+svg.hover .link.hover, .link:hover {
+  stroke: blue !important;
+  opacity: 1 !important;
+}
 
-	.target-arrow {
-		stroke-width: 1px;
-		stroke: #666;
-		fill: none;
-		opacity: 1;
-	}
+svg.fixed .link.fixed {
+  stroke: red;
+  opacity: 1;
+}
 
-	.hud {
-		position: absolute;
-		top: 5px;
-		left: 5px;
-	}
+.target-arrow {
+  stroke-width: 1px;
+  stroke: #666;
+  fill: none;
+  opacity: 1;
+}
 
-	#vis svg { 
-		position: absolute;
-		top: 0;
-		bottom: 0;
-		left: 0;
-		right: 0;
-		width: 100%;
-	}
+#legend .node {
+  display: inline-block;
+  border: 1px solid red;
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+}
+
+#legend .node.receptor {
+  background-color: #99ccff;
+}
+
+#legend .node.ligand {
+  background-color: #00cc66;
+}
+
+#legend .node.both {
+  background-color: #cc33cc;
+}
+
+
