--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -26,12 +26,42 @@ body {
   padding-bottom: 0;
 }
 
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
+#header {
+  height: 40px;
+  position: absolute;
+  top: 0;
+  left: 16.6666%;
+  right: 0;
+  background-color: #eee;
   color: #777;
   border-top: 1px solid #e5e5e5;
 }
+
+/* Custom page footer */
+
+#ui {
+  background-color: #eee;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.9;
+}
+
+#ui:hover {
+  opacity: 1;
+}
+
+#footer {
+  height: 30px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #f5f5f5;
+  color: #777;
+  border-top: 1px solid #e5e5e5;
+}
+
 
 /* Customize container */
 
@@ -70,3 +100,13 @@ body {
 .rotate {
   display: inline-block;
 }
+
+.chosen-container-multi {
+width: 100% !important;
+}
+
+.chosen-container-multi .chosen-choices li.search-field input[type="text"] {
+height: auto;
+}
+
+
