--- a/app/scripts/components/slider/slider.html
+++ b/app/scripts/components/slider/slider.html
@@ -1,4 +1,4 @@
-<input type="range" step="1" ng-model="value" min="0" max="{{max}}">
-<span class="bubble value" ng-style="{left: percent+'%'}" ng-bind="value"></span>
-<span class="bubble limit floor" ng-show="left" >{{0 | number:2}}</span>
+<input type="range" step="1" ng-model="percent" min="0" max="100">
+<span class="bubble value" ng-style="bubbleStyle">{{internalValue | number:0}}</span>
+<span class="bubble limit floor" ng-show="left" >{{min | number:2}}</span>
 <span class="bubble limit ceiling" ng-show="right">{{max | number:2}}</span>
