--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -109,33 +109,9 @@ width: 100% !important;
 height: auto;
 }
 
-/* Slider */
-
-.slider {
-    display:     block;
-    position:    relative;
-    height:      20px;
-    width:       100%;
-  }
-
-  .slider span.bubble {
-    position: absolute;
-    font-size:   0.7em;
-    line-height: 1.4em;
-    font-family: sans-serif;
-    text-align:  center;
-    text-shadow: none;
-    top:         2em;
-    cursor:      pointer;
-  }
-
-  .slider span.bubble.value {
-    margin-left: -0.5em;
-  }
-
-  .slider span.bubble.ceiling {
-    left: auto;
-    right: 0;
-  }
+.chosen-container-multi .chosen-choices {
+  max-height: 300px;
+  overflow-y: scroll;  
+}
 
 
