--- a/app/scripts/components/jordan_network/chart.css
+++ b/app/scripts/components/jordan_network/chart.css
@@ -5,10 +5,14 @@
   position: absolute;
   top: 0;
   bottom: 0;
-  left: 2%;
-  right: 2%;
-  width: 96%;
+  left: 0;
+  right: 0;
+  width: 100%;
   height: 100%;
+  
+  text-rendering: optimizeLegibility;
+  shape-rendering: geometricPrecision;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
 .node {
@@ -21,7 +25,9 @@
 
 .node text {
   stroke: #333;
+  fill: #333;
   stroke-width: 1px;
+  font-size: 8px;
   cursor: pointer;
 }
 
@@ -29,6 +35,10 @@
   stroke: #333;
   fill: blue;
   stroke-width: 2px;
+}
+
+.node:hover text, .node.hover text, .node.fixed text {
+  font-size: 18px;
 }
 
 .node.fixed circle {
@@ -73,9 +83,10 @@ svg.fixed .link.fixed {
 #legend .node {
   display: inline-block;
   border: 1px solid red;
-  width: 10px;
-  height: 10px;
-  border-radius: 5px;
+  width: 20px;
+  height: 20px;
+  margin-top: 5px;
+  border-radius: 10px;
 }
 
 #legend .node.receptor {
@@ -90,4 +101,33 @@ svg.fixed .link.fixed {
   background-color: #cc33cc;
 }
 
+
+.d3-tip {
+  line-height: 1;
+  padding: 12px;
+  background: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  border-radius: 2px;
+  pointer-events:none !imporatant;
+}
+
+/* Creates a small triangle extender for the tooltip */
+.d3-tip.node:after {
+  box-sizing: border-box;
+  display: inline;
+  font-size: 10px;
+  width: 100%;
+  line-height: 1;
+  color: rgba(0, 0, 0, 0.8);
+  content: "\25BC";
+  position: absolute;
+  text-align: center;
+}
+
+/* Style northward tooltips differently */
+.d3-tip.node.n:after {
+  margin: -1px 0 0 0;
+  top: 100%;
+  left: 0;
+}
 
