--- a/app/scripts/components/ui/main.html
+++ b/app/scripts/components/ui/main.html
@@ -12,7 +12,7 @@
   </div>
 </div>
 
-<div id="ui" class="content col-md-2" ng-controller="UICtrl">
+<div id="ui" class="content col-md-4" ng-controller="UICtrl">
   <div class="col-md-12">
 
     <h4>Ligand Receptor Connectome</h4>
@@ -32,7 +32,7 @@
     <div id="filters" class="fade in collapse">
       <p />
       <div class="">
-        <a data-toggle="collapse" data-target="#pairsBox" >Ligand - Receptor Pairs <b class="caret"></b></a>
+        <a href data-toggle="collapse" data-target="#pairsBox" >Ligand - Receptor Pairs <b class="caret"></b></a>
         <div class="pull-right small">{{selected.pairs.length}} / <a href ng-click="selected.pairs = data.pairs">{{data.pairs.length}}</a> <a href ng-click="selected.pairs = []">(clear)</a></div>  
       </div>
       <div id="pairsBox" class="fade out collapse">
@@ -41,7 +41,7 @@
 
       <p />
       <div class="">
-        <a data-toggle="collapse" data-target="#cellsBox" >Samples <b class="caret"></b></a>
+        <a href data-toggle="collapse" data-target="#cellsBox" >Samples <b class="caret"></b></a>
         <div class="pull-right small">{{selected.cells.length}} / <a href ng-click="selected.cells = data.cells">{{data.cells.length}}</a> <a href ng-click="selected.cells = []">(clear)</a></div>
       </div>
       <div id="cellsBox" class="fade out collapse" >
@@ -49,11 +49,18 @@
       </div>
 
       <p />
-      Ligand min TPM
-      <div slider ng-model="ligandRange.val" max="ligandRange.max" min="1"></div>
+      <div>
+        <a href data-toggle="collapse" data-target="#ligandRange" >Ligand min TPM  <b class="caret"></b></a>
+        <div class="pull-right small"> > {{ligandRange.val | number:2}} tpm</div>
+      </div>
+      <div slider id="ligandRange" class="fade out collapsed" ng-model="ligandRange.val" max="ligandRange.max" min="1"></div>
 
-      <p /><br />Receptor min TPM
-      <div slider ng-model="receptorRange.val" max="receptorRange.max" min="1"></div>
+      <p />
+      <div>
+        <a href data-toggle="collapse" data-target="#receptorRange" >Receptor min TPM  <b class="caret"></b></a>
+        <div class="pull-right small"> > {{receptorRange.val | number:2}} tpm</div>
+      </div>
+      <div slider id="receptorRange" class="fade out collapsed" ng-model="receptorRange.val" max="receptorRange.max" min="1"></div>
 
     </div>
 
@@ -67,7 +74,7 @@
         <li>The top 100 edges (L-R pairs) for the selected cells will appear in the middle.
         <li>Hover over nodes and edges to get more information.
         <li>Click and drag nodes to move.
-        <li>Click a node to fix in place.  Click again to release.
+        <li>Double click a node to fix in place.  Double click again to release.
       </ul> 
     </div>
    
