--- a/app/components/ui/main.html
+++ b/app/components/ui/main.html
@@ -82,7 +82,12 @@
   </div>
 
   <div id="header" class="header row">
-    <button snap-toggle snap-dragger class="btn"><i class="glyphicon glyphicon-align-justify"></i></button>
+    <button type="button" snap-toggle class="navbar-toggle" title="Click to show stats and options">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
     <div id="legend">
       <div class="rotate"> <div class="node ligand"></div> Ligand</div>
       <div class="rotate"> <div class="node receptor"></div> Receptor</div>
