--- a/app/components/slider/slider.html
+++ b/app/components/slider/slider.html
@@ -1,3 +1,10 @@
-<input type="range" step="1" ng-model="percent" min="0" max="100">
-<span class="bubble limit floor" ng-show="left" >{{min | number:2}}</span>
-<span class="bubble limit ceiling" ng-show="right">{{max | number:2}}</span>
+<div class="row">
+  <div class="col-md-4">
+    <input type="number" min="{{min}}" max="{{max}}" ng-model="value" class="col-md-12">
+  </div>
+  <div class="col-md-8">
+    <input type="range" class="" step="1" ng-model="rangeValue" min="{{min}}" max="{{max}}">
+    <span class="bubble limit floor" ng-show="left" >{{min | number:0}}</span>
+    <span class="bubble limit ceiling" ng-show="right">{{max | number:0}}</span>      
+  </div>
+</div>
