--- a/app/components/jordan_network/chart.css
+++ b/app/components/jordan_network/chart.css
@@ -29,7 +29,14 @@
   stroke-width: 1px;
   font-size: 8px;
   cursor: pointer;
+  display: none;
 }
+
+svg.labels .node text {
+  display: inherit;
+} 
+
+
 
 .node:hover, .node.hover {
   stroke: #333;
@@ -92,11 +99,11 @@ svg.fixed .link.fixed {
 
 #legend .node {
   display: inline-block;
-  border: 1px solid red;
-  width: 10px;
-  height: 10px;
+  border: 0;
+  width: 16px;
+  height: 16px;
   margin-top: 0;
-  border-radius: 5px;
+  border-radius: 8px;
 }
 
 #legend .node.receptor {
