--- a/app/components/ui/main.css
+++ b/app/components/ui/main.css
@@ -48,6 +48,28 @@ body {
 
 #ui .title {
   background-color: buttonface;
+  padding: 2px 0;
+}
+
+#ui .title:after {
+    font-family: 'Glyphicons Halflings'; 
+    content: "\e114";
+    float: right;
+    color: grey;
+    font-size: 12px;
+    margin: 5px 5px;
+}
+
+#ui .title.collapsed:after {
+    content: "\e080";    /* adjust as needed, taken from bootstrap.css */
+}
+
+#ui .collapsed > a > .caret {
+  border: 1px solid red;
+  border-left: 4px solid;
+  border-right: 4px solid transparent;
+  border-bottom: 4px solid transparent;
+  border-top: 4px solid transparent;
 }
 
 #ui:hover {
@@ -123,3 +145,4 @@ height: auto;
 .snap-content {
   background-color: white;
 }
+
